src/private/pcre.nim


# The structure for passing out data via the pcre_callout_function. We use a
#structure so that new fields can be added on the end in future versions,
#without changing the API of the function, thereby allowing old clients to work
#without modification. 

type 
  callout_block* {.importc: "pcre_callout_block", header: pcreHeader.} = object 
    version* {.importc: "version".}: cint # Identifies version of block 
                                          # ------------------------ Version 0 ------------------------------- 
    callout_number* {.importc: "callout_number".}: cint # Number compiled into pattern 
    offset_vector* {.importc: "offset_vector".}: ptr cint # The offset vector 
    subject* {.importc: "subject".}: cstring # The subject being matched 
    subject_length* {.importc: "subject_length".}: cint # The length of the subject 
    start_match* {.importc: "start_match".}: cint # Offset to start of this match attempt 
    current_position* {.importc: "current_position".}: cint # Where we currently are in the subject 
    capture_top* {.importc: "capture_top".}: cint # Max current capture 
    capture_last* {.importc: "capture_last".}: cint # Most recently closed capture 
    callout_data* {.importc: "callout_data".}: pointer # Data passed in with the call 
                                                       # ------------------- Added for Version 1 
                                                       # -------------------------- 
    pattern_position* {.importc: "pattern_position".}: cint # Offset to next item in the pattern 
    next_item_length* {.importc: "next_item_length".}: cint # Length of next item in the pattern 
                                                            # ------------------- Added for Version 2 
                                                            # -------------------------- 
    mark* {.importc: "mark".}: ptr cuchar # Pointer to current mark or NULL    
                                          # 
                                          # ------------------------------------------------------------------ 
# Indirection for store get and free functions. These can be set to
#alternative malloc/free functions if required. Special ones are used in the
#non-recursive case for "frames". There is also an optional callout function
#that is triggered by the (?) regex item. For Virtual Pascal, these definitions
#have to take another form. 

proc malloc*(a2: csize): pointer {.cdecl, importc: "pcre_malloc", pcreImport.}
proc free*(a2: pointer) {.cdecl, importc: "pcre_free", pcreImport.}
proc stack_malloc*(a2: csize): pointer {.cdecl, importc: "pcre_stack_malloc", pcreImport.}
proc stack_free*(a2: pointer) {.cdecl, importc: "pcre_free", pcreImport.}
proc callout*(a2: ptr callout_block): cint {.cdecl, importc: "pcre_callout", pcreImport.}
proc stack_guard*(): cint {.cdecl, importc: "pcre_stack_guard", pcreImport.}

# User defined callback which provides a stack just before the match starts. 

type 
  jit_callback* = proc (a2: pointer): ptr jit_stack {.cdecl.}

# Exported Pcre functions 

proc compile*(a2: cstring; a3: cint; a4: ptr cstring; a5: ptr cint; 
              a6: ptr cuchar): ptr Pcre {.cdecl, importc: "pcre_compile", 
    pcreImport.}
proc compile2*(a2: cstring; a3: cint; a4: ptr cint; a5: ptr cstring; 
               a6: ptr cint; a7: ptr cuchar): ptr Pcre {.cdecl, 
    importc: "pcre_compile2", pcreImport.}
proc config*(a2: cint; a3: pointer): cint {.cdecl, importc: "pcre_config", 
    pcreImport.}
proc copy_named_substring*(a2: ptr Pcre; a3: cstring; a4: ptr cint; a5: cint; 
                           a6: cstring; a7: cstring; a8: cint): cint {.cdecl, 
    importc: "pcre_copy_named_substring", pcreImport.}
proc copy_substring*(a2: cstring; a3: ptr cint; a4: cint; a5: cint; a6: cstring; 
                     a7: cint): cint {.cdecl, importc: "pcre_copy_substring", 
                                       pcreImport.}
proc dfa_exec*(a2: ptr Pcre; a3: ptr ExtraData; a4: cstring; a5: cint; a6: cint; 
               a7: cint; a8: ptr cint; a9: cint; a10: ptr cint; a11: cint): cint {.
    cdecl, importc: "pcre_dfa_exec", pcreImport.}
proc exec*(a2: ptr Pcre; a3: ptr ExtraData; a4: cstring; a5: cint; a6: cint; a7: cint; 
           a8: ptr cint; a9: cint): cint {.cdecl, importc: "pcre_exec", 
    pcreImport.}
proc jit_exec*(a2: ptr Pcre; a3: ptr ExtraData; a4: cstring; a5: cint; a6: cint; 
               a7: cint; a8: ptr cint; a9: cint; a10: ptr jit_stack): cint {.
    cdecl, importc: "pcre_jit_exec", pcreImport.}
proc free_substring*(a2: cstring) {.cdecl, importc: "pcre_free_substring", 
                                    pcreImport.}
proc free_substring_list*(a2: ptr cstring) {.cdecl, 
    importc: "pcre_free_substring_list", pcreImport.}
proc fullinfo*(a2: ptr Pcre; a3: ptr ExtraData; a4: cint; a5: pointer): cint {.
    cdecl, importc: "pcre_fullinfo", pcreImport.}
proc get_named_substring*(a2: ptr Pcre; a3: cstring; a4: ptr cint; a5: cint; 
                          a6: cstring; a7: cstringArray): cint {.cdecl, 
    importc: "pcre_get_named_substring", pcreImport.}
proc get_stringnumber*(a2: ptr Pcre; a3: cstring): cint {.cdecl, 
    importc: "pcre_get_stringnumber", pcreImport.}
proc get_stringtable_entries*(a2: ptr Pcre; a3: cstring; a4: cstringArray; 
                              a5: cstringArray): cint {.cdecl, 
    importc: "pcre_get_stringtable_entries", pcreImport.}
proc get_substring*(a2: cstring; a3: ptr cint; a4: cint; a5: cint; 
                    a6: cstringArray): cint {.cdecl, 
    importc: "pcre_get_substring", pcreImport.}
proc get_substring_list*(a2: cstring; a3: ptr cint; a4: cint; 
                         a5: ptr cstringArray): cint {.cdecl, 
    importc: "pcre_get_substring_list", pcreImport.}
proc maketables*(): ptr cuchar {.cdecl, importc: "pcre_maketables", 
                                 pcreImport.}
proc refcount*(a2: ptr Pcre; a3: cint): cint {.cdecl, importc: "pcre_refcount", 
    pcreImport.}
proc study*(a2: ptr Pcre; a3: cint; a4: ptr cstring): ptr ExtraData {.cdecl, 
    importc: "pcre_study", pcreImport.}
proc free_study*(a2: ptr ExtraData) {.cdecl, importc: "pcre_free_study", 
                                  pcreImport.}
proc version*(): cstring {.cdecl, importc: "pcre_version", pcreImport.}
# Utility functions for byte order swaps. 

proc pattern_to_host_byte_order*(a2: ptr Pcre; a3: ptr ExtraData; a4: ptr cuchar): cint {.
    cdecl, importc: "pcre_pattern_to_host_byte_order", pcreImport.}
# JIT compiler related functions. 

proc jit_stack_alloc*(a2: cint; a3: cint): ptr jit_stack {.cdecl, 
    importc: "pcre_jit_stack_alloc", pcreImport.}
proc jit_stack_free*(a2: ptr jit_stack) {.cdecl, importc: "pcre_jit_stack_free", 
    pcreImport.}
proc assign_jit_stack*(a2: ptr ExtraData; a3: jit_callback; a4: pointer) {.cdecl, 
    importc: "pcre_assign_jit_stack", pcreImport.}
proc jit_free_unused_memory*() {.cdecl, importc: "pcre_jit_free_unused_memory", 
                                 pcreImport.}
